# wmt25-model-compression

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  ide-setup.sh  pyproject.toml  requirements.txt  run.py  submission-guide.md
amlt/: a100.yml
evals/: compute_scores.py  debug-all.sh  evaluate.sh  hallucinations_checks.py  node-setup.sh  run-all.sh  sanitycheck-all.sh  sanitycheck.sh  speeds.ipynb
modelzip/: __init__.py  baseline.py  compress.py  config.py  data.py  evaluate.py  report.py  run.sh  setup.py
